drawer overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6209,6 +6209,14 @@ body{
          padding-left: 10px;
          padding-right: 10px;
       }
+      @media  screen and (max-width:$miniDesktop) {
+        th:first-child {
+          min-width: 125px;
+        }
+        .crud-label {
+          min-width: 84px;
+        }
+      }
     }
   }
 }
@@ -7100,6 +7108,7 @@ left: 17rem;
     }
   }
 .calculator-drawer {
+  z-index: 1301 !important;
   .drawer-wrapper {
     width: 1100px;
     table {
@@ -7114,3 +7123,11 @@ left: 17rem;
   min-height:45px !important;
   }
 
+  // <----------Corrugated box labels UI------------>
+.corrugated-box-label-wrapper {
+  label {
+    min-height: 42px;
+    display: flex;
+    align-items: center;
+  }
+}
